<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/expander"
        android:layout_width="@dimen/tree_icon_width"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/expand"
        android:tooltipText="@string/expand"
        android:scaleType="center" />

    <ImageView
        android:id="@+id/check"
        android:layout_width="@dimen/tree_icon_width"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/select"
        android:tooltipText="@string/select"
        android:scaleType="center" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:paddingHorizontal="8dp"
        android:singleLine="true"
        android:textAppearance="?attr/textAppearanceBodyLarge" />

    <ImageButton
        android:id="@+id/remove"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/remove_folder"
        android:tooltipText="@string/remove_folder"
        android:src="@drawable/ic_delete" />
</LinearLayout>
